# dist-int-comp

./: CMakeLists.txt  master.c  slave.c  slave.cc
